# L432_bare_metal

./: BareMetal_MysterySTM32_Methodology.md  CvsRust.txt  LICENSE  README.md  STLINK_WSL_Flashing_Checklist.md  STM32L432KC_C_vs_Rust_Experiment.md  stm_32_l_432_kc_bare_metal_c_vs_rust_experiment_design.md  system_setup.md
stage0_c_stml432kc_project/: .cproject  .project  Makefile  README.md  build_id.c  linker.ld  main.c  startup.s
stage0_rust_stml432kc_proj/: Cargo.toml  README.md  build.rs  linker.ld
stage0_rust_stml432kc_proj/.cargo/: config.toml
stage0_rust_stml432kc_proj/src/: main.rs
stage1_c_stml432kc_project/: Makefile  README.md  build_id.c  linker.ld  main.c
stage2_c_stml432kc_project/: main.c  runtime.c
stage3_c_stml432kc_project/: .gdbinit  Makefile  README.md  arch_cortexm_baremetal.h  board.c  board.h  build_id.c  gigi_bare_metal.md  init_board.c  init_clock.c  init_clock.h  linker.ld  main.c  mcu.h  openocd_l432_stlink.cfg  runtime.c  startup.s
stage3b_c_stm32f3discovery_project/: Makefile  init_board.c  init_board.h  init_clock.c  linker.ld  mcu.h  mcu_stm32f3xx_baremetal.h  mcu_stm32l4xx_baremetal.h  runtime.c  runtime.h  startup.s
